--- a/index.html
+++ b/index.html
@@ -2,101 +2,154 @@
 
 <head>
     <title>Music To My Ears</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <link rel="stylesheet" href="music.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap" rel="stylesheet">
+
     <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
+
 </head>
 
 <body>
 
-    <div id="musiccontrols">
-        <div id="titletrack"></div>
-        <div id="trackartist"></div>
-        <div id="counter">
-            <p id="minuter">0:</p>
-            <p id="seconder">00</p>
-        </div>
-        <img src="Images/prev.jpg" class="prevsong play-circle-img">
-        <img src="Images/mcplay.jpg" class="play-circle-img mcplay">
-        <img src="Images/mcpause.jpg" class="pause-circle-img mcpause">
-        <img src="Images/next.jpg" class="nextsong play-circle-img">
-        <br><br>
-        <span class="material-symbols-outlined">
-            <img src="Images/repeat off.svg" class="replaybutt">
-        </span>
-        <span class="material-symbols-outlined">
-            <img src="Images/repeat on.svg" class="replayplaylistt">
-        </span>
-        <span class="material-symbols-outlined">
-            <img src="Images/repeat one.svg" class="replayonesong">
-        </span>
-        <img src="Images/shuffle.svg" class="shuffleoff shuffle play-circle-img">
-        <img src="Images/shuffle on.svg" class="shuffleon shuffle play-circle-img">
-    </div>
-
     <div id="playbuts">
 
         <div class="showerbeckyg title">
-            <span class="material-symbols-outlined play">
-                <img src="Images/play_circle.svg" class="play-circle-img showerpl">
-            </span>
-            <div class="showerpa animationaud">
-                <span class="thebars bar0"></span>
-                <span class="thebars bar1"></span>
-                <span class="thebars bar2"></span>
-            </div>
             <p class="sname"><span id="songnamemain">Shower</span><br><span class="artist">Becky G</span></p>
             <audio id="t1" class="audio-element" data-file-artist="Becky G" data-file-name="Shower" song-id="shower">
                 <source src="Images/shower.mp3" type="audio/mpeg">
             </audio>
+            <div class="animationaud showerbars">
+                <span class="thebars showerbar1"></span>
+                <span class="thebars showerbar2"></span>
+                <span class="thebars showerbar3"></span>
+                <span class="thebars showerbar4"></span>
+            </div>
         </div>
 
 
         <div class="confessions-part-2-usher title">
-            <span class="material-symbols-outlined  play">
-                <img src="Images/play_circle.svg" class="play-circle-img cptupl">
-            </span>
             <p class="sname"><span id="songnamemain">Confessions part 2</span><br><span class="artist">Usher</span>
             </p>
             <audio id="t2" class="audio-element" data-file-artist="Usher" data-file-name="Confessions Part 2"
                 song-id="cptu">
                 <source src="music/Confessions Part 2.opus" type="audio/mpeg">
             </audio>
+            <div class="animationaud cptubars">
+                <span class="thebars cptubar1"></span>
+                <span class="thebars cptubar2"></span>
+                <span class="thebars cptubar3"></span>
+                <span class="thebars cptubar4"></span>
+            </div>
         </div>
 
 
 
         <div class="seasons-of-love-rent title">
-            <span class="material-symbols-outlined play">
-                <img src="Images/play_circle.svg" class="play-circle-img solrpl">
-            </span>
             <p class="sname"><span id="songnamemain">Seasons of Love</span><br><span class="artist">Rent</span></p>
             <audio id="t3" class="audio-element" data-file-artist="Rent" data-file-name="Season of Love" song-id="solr">
                 <source src="music/Seasons of Love.opus" type="audio/mpeg">
             </audio>
+            <div class="animationaud solrbars">
+                <span class="thebars solrbar1"></span>
+                <span class="thebars solrbar2"></span>
+                <span class="thebars solrbar3"></span>
+                <span class="thebars solrbar4"></span>
+            </div>
         </div>
 
 
 
         <div class="set-fire-to-the-rain-adele-royal-albert title">
-            <span class="material-symbols-outlined  play">
-                <img src="Images/play_circle.svg" class="play-circle-img sfttrarlpl">
-            </span>
             <p class="sname"><span id="songnamemain">Set Fire to the rain(Royal Albert hall)</span><br><span
                     class="artist">Adele</span></p>
             <audio id="t4" class="audio-element" data-file-artist="Adele" data-file-name="Set Fire to the rain"
                 song-id="sfttrarl">
                 <source src="music/Set Fire To The Rain Live at The Royal Albert Hall.opus" type="audio/mpeg">
             </audio>
+            <div class="animationaud sfttrarlbars">
+                <span class="thebars sfttrarlbar1"></span>
+                <span class="thebars sfttrarlbar2"></span>
+                <span class="thebars sfttrarlbar3"></span>
+                <span class="thebars sfttrarlbar4"></span>
+            </div>
         </div>
 
+        <div class="Come-and-Get-Your-Love-Redbone title">
+            <p class="sname"><span id="songnamemain">Come and Get Your Love</span><br><span
+                    class="artist">Redbone</span></p>
+            <audio id="t5" class="audio-element" data-file-artist="Redbone" data-file-name="Come and Get Your Love"
+                song-id="CaGYLR">
+                <source src="music/Come and Get Your Love - Redbone.opus" type="audio/mpeg">
+            </audio>
+            <div class="animationaud CaGYLRbars">
+                <span class="thebars CaGYLRbar1"></span>
+                <span class="thebars CaGYLRbar2"></span>
+                <span class="thebars CaGYLRbar3"></span>
+                <span class="thebars CaGYLRbar4"></span>
+            </div>
+        </div>
+
+        <div class="Million-Years-Ago-Adele title">
+            <p class="sname"><span id="songnamemain">Million Years Ago</span><br><span class="artist">Adele</span></p>
+            <audio id="t6" class="audio-element" data-file-artist="Adele" data-file-name="Million Years Ago"
+                song-id="MYAA">
+                <source src="music/Million Years Ago - Adele.opus" type="audio/mpeg">
+            </audio>
+            <div class="animationaud MYAAbars">
+                <span class="thebars MYAAbar1"></span>
+                <span class="thebars MYAAbar2"></span>
+                <span class="thebars MYAAbar3"></span>
+                <span class="thebars MYAAbar4"></span>
+            </div>
+        </div>
     </div>
+
+
+    <footer id="musiccontrols">
+        <div id="centertext">
+            <div id="titletrack"></div>
+            <div id="trackartist"></div>
+        </div>
+        <div id="counter">
+            <p id="minuter">00:</p>
+            <p id="seconder">00</p>
+        </div>
+        <div id="musiccontrolicons">
+            <span class="material-symbols-outlined">
+                <img src="https://beyondmebtw.com/projects/music/Images/repeat.svg" class="replaybutt">
+            </span>
+            <span class="material-symbols-outlined">
+                <img src="https://beyondmebtw.com/projects/music/Images/infinity.svg" class="replayplaylistt">
+            </span>
+            <span class="material-symbols-outlined">
+                <img src="https://beyondmebtw.com/projects/music/Images/repeat-1.svg" class="replayonesong">
+            </span>
+            <img src="https://beyondmebtw.com/projects/music/Images/chevron-first.svg" class="play-circle-img prevsong">
+            <img src="https://beyondmebtw.com/projects/music/Images/play-circle.svg" class="play-circle-img mcplay">
+            <img src="https://beyondmebtw.com/projects/music/Images/pause-circle.svg" class="pause-circle-img mcpause">
+            <img src="https://beyondmebtw.com/projects/music/Images/chevron-last.svg" class="play-circle-img nextsong">
+            <br><br>
+            
+            <span class="material-symbols-outlined">
+                <img src="https://beyondmebtw.com/projects/music/Images/shuffle.svg" class="shuffle">
+            </span>
+            <span class="material-symbols-outlined">
+                <img src="https://beyondmebtw.com/projects/music/Images/shuflleon.svg" class="shuffleon">
+            </span>
+        </div>
+    </footer>
+
+
     <script src="music.js" type="text/javascript"></script>
 </body>
 
